@@ -1,2 +1,8 @@
 $Id$
 Please see docs/gheimdall-manual.txt.
+
+IMPORTANT NOTE:
+
+Now GHeimdall has a functionality for resetting users'
+passwords. Please restrict access to the URL '/gheimdall/manage*'
+properly. Please see samples/apache-modpython.sample for examples.
