@@ -61,6 +61,9 @@ apps.uname_mapper = 'null'
 # use change password or not
 apps.use_change_passwd = True
 
+# use reset password or not
+apps.use_reset_passwd = False
+
 # passwd engine to use
 apps.passwd_engine = 'ldappasswd'
 
@@ -87,17 +90,18 @@ apps.hash_function_name = 'SHA-1'
 apps.ldap_uri = 'ldap://ldap.example.com/'
 apps.ldap_basedn = 'dc=example,dc=com'
 apps.ldap_filter = 'uid=%s'
+apps.ldap_rootdn = 'cn=admin,dc=example,dc=com'
+apps.ldap_rootpw = 'password'
+apps.ldap_passwd_hash_style = '{SHA}'
 
 # error reporting
 error_catcher.sender_email = 'root@localhost'
 error_catcher.admin_email = 'root@localhost'
 error_catcher.smtp_host = 'localhost'
+mail.on = True
+mail.server = 'localhost'
 #error_catcher.smtp_user = ''
 #error_catcher.smtp_passwd = ''
-
-# for turbomail
-#mail.on = True
-#mail.server = 'localhost'
 
 # compress the data sends to the web browser
 # [/] 
